# sakila_lab_lilit_ajoyan

./: .gitignore  README.md  pyproject.toml  sakila_lab_analysis.ipynb
dashboard/: EVIDENCE_TEMPLATE_README.md
dashboard/pages/: Category.md  actor.md  customer.md  index.md  revenue.md
dashboard/sources/Sakila/: actor.sql  category.sql  category_film.sql  connection.yaml  customer.sql
